# LD52-Reaper

./: Cargo.toml  README.md  index.html  settings.ron
.github/workflows/: release.yaml
assets/: sam1.aseprite
assets/levels/: World.ldtk
assets/levels/World/backups/backup_2023-01-08_09-28-45/: World.ldtk
assets/levels/World/backups/backup_2023-01-08_09-34-34/: World.ldtk
assets/levels/World/backups/backup_2023-01-08_09-34-41/: World.ldtk
assets/levels/World/backups/backup_2023-01-08_09-34-45/: World.ldtk
assets/levels/World/backups/backup_2023-01-08_09-38-01/: World.ldtk
assets/levels/World/backups/backup_2023-01-08_11-55-46/: World.ldtk
assets/levels/World/backups/backup_2023-01-08_11-56-26/: World.ldtk
assets/levels/World/backups/backup_2023-01-09_17-40-00/: World.ldtk
assets/levels/World/backups/backup_2023-01-09_17-44-19/: World.ldtk
assets/levels/World/backups/backup_2023-01-09_17-45-11/: World.ldtk
assets/levels/World/backups/backup_2023-01-09_17-46-09/: World.ldtk
assets/levels/World/backups/backup_2023-01-09_17-46-41/: World.ldtk
assets/levels/World/backups/backup_2023-01-09_17-47-54/: World.ldtk
assets/levels/World/backups/backup_2023-01-09_17-49-03/: World.ldtk
assets/levels/World/backups/backup_2023-01-09_17-49-49/: World.ldtk
assets/levels/World/backups/backup_2023-01-09_17-51-36/: World.ldtk
assets/levels/World/backups/backup_2023-01-10_17-24-51/: World.ldtk
assets/sprites/: SOUL.aseprite  door.aseprite  ghost.aseprite  itch_cover.aseprite  launch_effect.aseprite  palette.aseprite  sam1.aseprite  soulburst.aseprite  tilemap.aseprite  wheat.aseprite
src/: actor.rs  camera.rs  door.rs  ghost.rs  lib.rs  loading.rs  main.rs  mainmenu.rs  menu.rs  pickup.rs  player.rs  settings.rs  soul.rs  sprite_anim.rs  ui_events.rs  world.rs
src/actions/: game_control.rs  mod.rs
